Sequencer Scene Strips' Input(3D/Sequencer) and volume and has no effect on audio. #66117

Closed
opened 2019-06-25 12:57:53 +02:00 by tintwotin · 13 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 24.20.100.6137

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-23 22:45, hash: 9c5d54bfaf
Worked: (optional)

Short description of error
The volume floatproperty of Scene strips(in the Sidebar) has no effect and selecting Input: 3D or Sequencer has no effect on what sound are heard. Both will always be heard.
image.png

Exact steps for others to reproduce the error

  • Add a speaker to the 3d view.

  • Add a sound file to the speaker from first frame.

  • In the sequencer add a sound file from first frame.

  • Boths sound should be heard when playing.

  • Add a new(!) scene.

  • In the sequencer add a scene strip.

  • In the Sidebar in the Scene strip sub panel changing the input will not change what sound is heard.

  • In the Sidebar in the Scene strip sub panel changing the volume will not have any effect.

A blend file, where the above has been done - so to experience the bug change input and change volume:
Scene_Strip_Volume_No_Effect.blend

And two audio files if the packing didn't work
433725__disagree__running-on-ground.flac
204341__bunting__birds-in-aviary.wav

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 24.20.100.6137 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-23 22:45, hash: `9c5d54bfaf` Worked: (optional) **Short description of error** The volume floatproperty of Scene strips(in the Sidebar) has no effect and selecting Input: 3D or Sequencer has no effect on what sound are heard. Both will always be heard. ![image.png](https://archive.blender.org/developer/F7547287/image.png) **Exact steps for others to reproduce the error** - Add a speaker to the 3d view. - Add a sound file to the speaker from first frame. - In the sequencer add a sound file from first frame. - Boths sound should be heard when playing. - Add a new(!) scene. - In the sequencer add a scene strip. - In the Sidebar in the Scene strip sub panel changing the input will not change what sound is heard. - In the Sidebar in the Scene strip sub panel changing the volume will not have any effect. A blend file, where the above has been done - so to experience the bug change input and change volume: [Scene_Strip_Volume_No_Effect.blend](https://archive.blender.org/developer/F7547280/Scene_Strip_Volume_No_Effect.blend) And two audio files if the packing didn't work [433725__disagree__running-on-ground.flac](https://archive.blender.org/developer/F7547281/433725__disagree__running-on-ground.flac) [204341__bunting__birds-in-aviary.wav](https://archive.blender.org/developer/F7547284/204341__bunting__birds-in-aviary.wav)
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
Author

Added subscribers: @neXyon, @Sergey

Added subscribers: @neXyon, @Sergey
Joerg Mueller was assigned by Sergey Sharybin 2019-06-26 13:03:17 +02:00

I did my best attempt to bring behavior closer to 2.79, but this was never working reliably. Attached demo file which can work in 2.79. Toggling "Use sequencer" in the Scene strip doesn't do proper update once 3D sound was used once.

The audio and 3D sound system needs a proper integration into dependency graph and no longer rely on the forced updates from so many areas. And on top of that, we need to have a clear design on how and when is being used in the sound scene.

#66117.blend

I did my best attempt to bring behavior closer to 2.79, but this was never working reliably. Attached demo file which can work in 2.79. Toggling "Use sequencer" in the Scene strip doesn't do proper update once 3D sound was used once. The audio and 3D sound system needs a proper integration into dependency graph and no longer rely on the forced updates from so many areas. And on top of that, we need to have a clear design on how and when is being used in the sound scene. [#66117.blend](https://archive.blender.org/developer/F7549821/T66117.blend)
Member

That would be really nice! I'd love to see sound_update_base and BKE_sound_update_scene gone. The biggest issue here is animation. Whenever some audio animation (volume, pitch, etc.) changes, all affected frames need updating. If that's possible with the dependency graph, that would be ideal! E.g., if an animation is changed by modifying the f-curve, that parameter needs to be updated for all frames that now have a different value.

That would be really nice! I'd love to see `sound_update_base` and `BKE_sound_update_scene` gone. The biggest issue here is animation. Whenever some audio animation (volume, pitch, etc.) changes, all affected frames need updating. If that's possible with the dependency graph, that would be ideal! E.g., if an animation is changed by modifying the f-curve, that parameter needs to be updated for all frames that now have a different value.

Added subscriber: @jaker-3

Added subscriber: @jaker-3

Perhaps this problem is related (I cautiously ask here instead to register a new bug).

  1. Add a sound strip in the sequencer.
  2. Create a new scene and go to the sequencer.
  3. Add the first scene (scene strip).
  4. Select "Camera" as input.

(Save, quit and open the .blend file)

Now I need to switch between/toggle "Camera" and "Sequencer" to hear the sound from the scene strip when I press "Play Animation". When I render it will be without sound.

Blender 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: be060c3990

Perhaps this problem is related (I cautiously ask here instead to register a new bug). 1. Add a sound strip in the sequencer. 2. Create a new scene and go to the sequencer. 3. Add the first scene (scene strip). 4. Select "Camera" as input. (Save, quit and open the .blend file) Now I need to switch between/toggle "Camera" and "Sequencer" to hear the sound from the scene strip when I press "Play Animation". When I render it will be without sound. Blender 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: `be060c3990`

@jaker-3, this doesn't sound related. In any case it is much easier to merge reports if investigation indeed shows they are related than to split unrelated ones.
So please make a new report and CC/assign it to me.

@jaker-3, this doesn't sound related. In any case it is much easier to merge reports if investigation indeed shows they are related than to split unrelated ones. So please make a new report and CC/assign it to me.

@neXyon, here is a patch which is likely needed to sanitize things a bit.

The reason i've initially added a code which adds all speakers to the depsgraph is because the confusion coming from 2.79:

  • In order to have 3d sound to work, scene preview must have been visible once
  • Disabling toggling scene strip's "Use Sequencer" did not disable sound either.

After thinking bit more now, i think we should only use speakers from scene if sequencer of that scene is NOT used (there is no sequencer in it, or strip using that scene is set to Camera. Keep in mind, it is no longer possible to use scene in it's own sequencer).

Think the main missing part is somehow removing sound when it's no longer needed/used: currently there are quite a bit cases when sound will not be gone during playback for until file is re-open, even though i am trying my best to enforce that from a dependency graph. This is something where i hope you can help :)

0001-Depsgraph-Only-use-speakers-if-scene-sequencer-is-no.patch

@neXyon, here is a patch which is likely needed to sanitize things a bit. The reason i've initially added a code which adds all speakers to the depsgraph is because the confusion coming from 2.79: - In order to have 3d sound to work, scene preview must have been visible once - Disabling toggling scene strip's "Use Sequencer" did not disable sound either. After thinking bit more now, i think we should only use speakers from scene if sequencer of that scene is NOT used (there is no sequencer in it, or strip using that scene is set to Camera. Keep in mind, it is no longer possible to use scene in it's own sequencer). Think the main missing part is somehow removing sound when it's no longer needed/used: currently there are quite a bit cases when sound will not be gone during playback for until file is re-open, even though i am trying my best to enforce that from a dependency graph. This is something where i hope you can help :) [0001-Depsgraph-Only-use-speakers-if-scene-sequencer-is-no.patch](https://archive.blender.org/developer/F7558130/0001-Depsgraph-Only-use-speakers-if-scene-sequencer-is-no.patch)
Author

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin
Joerg Mueller removed their assignment 2019-11-06 11:29:41 +01:00
Sergey Sharybin was assigned by Joerg Mueller 2019-11-06 11:29:41 +01:00
Member

Since I didn't get a response from you anymore on blender.chat and I don't have the required background knowledge, I'll assign this bug to you @sergey.

Since I didn't get a response from you anymore on blender.chat and I don't have the required background knowledge, I'll assign this bug to you @sergey.
Sergey Sharybin was unassigned by Dalai Felinto 2019-12-23 16:34:02 +01:00

Added subscriber: @iss

Added subscriber: @iss

I will merge this report to another one, because it is the same underlying issue.

I will merge this report to another one, because it is the same underlying issue.

Closed as duplicate of #69444

Closed as duplicate of #69444
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66117
No description provided.