Fix missing volume update via scene strip's settings

This is a part of T66117.

The entire sequencer+3d sound was never reliable, so this is as much as i can
fix currently.